--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -8,5 +8,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: aqua;
+    align-items: center;
+    
 }
