this is the footer part of my branch

--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -11,3 +11,11 @@ body{
     align-items: center;
     
 }
+#footer{
+    width:auto;
+    height:auto;
+    background-color: rgb(185, 183, 183);
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
