--- a/Bootstrap/footer.css
+++ b/Bootstrap/footer.css
@@ -1,28 +1,48 @@
-#container {
-  width: 100%;
-  height: 40vh;
+#container-fluid {
   background-color: rgb(240, 238, 238);
   color: black;
-  margin: 20px 20px 20px 50px;
+  /* margin: 20px 20px 20px 50px; */
+  justify-content: center;
+  
 }
-#container > div:nth-child(1) {
+#container-fluid>div:nth-child(1) {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
-
+   padding:20px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: normal;
   margin: 20px 0 0 50px;
 }
-#container > div:nth-child(2) {
-  display: flex;
-  /* grid-template-columns: repeat(4,1fr); */
-  gap: 30px;
+.grey{
+  color: grey;
+}
+.social{
   margin:20px;
 }
+/* #container-fluid > div:nth-child(2) {
+  display: flex;
+  grid-template-columns: repeat(4,1fr);
+  gap: 30px;
+  margin:20px;
+} */
+.span2{
+  /* padding:60px;
+  box-sizing: content-box; */
+  margin-left:20px;
+  display:flex; 
+  flex-direction:row;
+  gap:10px; 
+  font-size:10px;
+}
+@media screen and (max-width>=2000px){
+  .dropdown{
+    display:none;
+  }
+}
 
-#container > div:nth-child(3) {
+#container-fluid > div:nth-child(3) {
   display: flex;
   /* grid-template-columns: repeat(4,1fr); */
   gap: 30px;
@@ -34,34 +54,20 @@
   display: none;
 }
 
-@media (min-width: 2000px) {
-  .dropdown,
+.dropdown,
   hr {
     display: none;
   }
-}
-
-@media (max-width:767px){
-  #container>div:nth-child(1) {
-    /* display:none; */
-  }
-  #container > div:nth-child(2) {
-    display: flex;
-    /* grid-template-columns: repeat(4,1fr); */
-    gap: 30px;
-    margin:20px;
-    flex-wrap: wrap;
-  }
+  div h1{
+    font-size:20px;
+    font-weight: 1000px;
+    margin-left:20px;
   
-  #container > div:nth-child(3) {
-    display: flex;
-    flex-wrap: wrap;
-    /* grid-template-columns: repeat(4,1fr); */
-    gap: 30px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
   }
+
+p{
+  margin-left:20px;
+  font-size:10px;
 }
 
  
@@ -73,13 +79,48 @@
 
   /* Show .dropdown and hr on screens with width <= 767px */
   @media screen and (max-width: 767px) {
+
+    /* Hide the first child of the container on small screens */
+    #container-fluid > div:nth-child(1) {
+      display: none;
+    }
+    .dropdown{
+      display:none;
+    }
+
     .dropdown,
     hr {
       display: block;
+      margin:20px;
     }
 
-    /* Hide the first child of the container on small screens */
-    #container > div:first-child {
-      display: none;
+    button{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap:150px;
+      
     }
+
+    .dropdown li{
+      display:none;
+    }
+     button:active+ul>li{
+      display: block;
+    }
+
+    .social{
+      padding:10px;
+      margin:10px;
+      gap:10px;
+    }
+
+    .span2{
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      gap:10px;
+      text-align: center;
+      justify-content: center;
+    } */
+
+    
   }
