--- a/Bootstrap/index.css
+++ b/Bootstrap/index.css
@@ -1,40 +1,193 @@
-#container{
-    width:1440px;
+/* Navbar styling */
+nav{
+    width:93%;
     margin: auto;
-    /* background-color: blue; */
 }
-
+ 
 #timeCraftNavbar{
-    /* background-color: blueviolet; */
     height: 10vh;
-
-}
-
-#carouselExampleDark{
-    width: 60%;
-    /* background-color: pink; */
-    height: 48px;
     
 }
+#timeCraftNavbar>div:nth-of-type(2){
+    font-size: 15px;
+}
+#button{
+    display: none;
+}
+#ham-content{
+    display: none;
+}
+
+/* carousel styling */
+
+figure{
+    
+    width: 100%;
+    margin: auto;
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 1;
+    left: 3.5%;
+}
+.hr1{
+    width:93%;
+    margin-left: 3%;
+}
+#carouselExampleDark{
+    width: 70%;
+    height: 48px;
+   font-size:12px; 
+   margin-left: 3%;  
+     
+}
+
 
 #carouselItem1{
     width: 90%; 
     position: relative; 
     left: 5%; right:2%;
 }
+
+
   
 .logo_img{
     background-image: url(./timecraft_logo.png);
      background-size: cover; 
      background-position: center;
-      height:48px; width: 80px;
+      min-height:30px; min-width: 100px;
 }
 
 #carouselItem2{
     width: 90%;
      position: relative;
       left: 5%; right:2%;
+      
 }
+ 
+/* Scroll bar for tab and phone view  */
+
+section {
+    display: none;
+}
+
+    /* Tab view  */
+
+@media(max-width:768px){
+   /* hamburger menu   */
+   nav{
+    width:97%;
+    margin: auto;
+   }
+   #timeCraftNavbar>div:nth-of-type(2)>span{
+     display: none;
+
+   }
+   #timeCraftNavbar>div:nth-of-type(2)>#button{
+    display: block;
+   }
+
+   
+
+/* making carosel invisable */
+
+   figure{
+    display: none;
+    
+   }
+
+  /* making scroll bar visable  */
+
+section{
+    padding: 0px;
+    margin: 0px;
+     display: block;
+     display: flex;
+     flex-direction: column;
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    background-color: white;
+    
+}
+hr{
+    
+    padding: 0px;
+   
+}
+
+.scroll-container {
+    width: 100%;
+    max-height: 48px; 
+    overflow-x: auto; 
+    white-space: nowrap; 
+    font-size: 13px;
+    background-color: white;
+    
+  }
+  .scroll-content{
+    margin-left: 3%;
+   
+  }
+  
+   .content {
+    width: 600px; 
+  } 
+ 
+}
+
+@media(max-width:420px){
+    nav{
+        width:97%;
+        margin: auto;
+        
+       }
+     
+       figure{
+        display: none;
+        
+       }
+    section{
+        padding: 0px;
+        margin: 0px;
+         display: block;
+         display: flex;
+         flex-direction: column;
+        position: sticky;
+        top: 0px;
+        z-index: 1;
+        background-color: white;
+        
+    }
+    hr{
+        width: 100%;
+        padding: 0px;
+       
+    }
+    
+    .scroll-container {
+        width: 100%;
+        max-height: 48px; 
+        overflow-x: auto; 
+        white-space: nowrap; 
+        font-size: 13px;
+        background-color: white;
+        
+      }
+      .scroll-content{
+        margin-left: 3%;
+       
+      }
+      /* Add some content for demonstration */
+      .content {
+        width: 600px; 
+      } 
+}
+
+
+
+
+
 
 
 
