--- a/Bootstrap/index.css
+++ b/Bootstrap/index.css
@@ -10,14 +10,183 @@ body{
     gap: 5px;
     
 }
-#sidebar{
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid;
+/* sidebar css part */
+
+.dark-circle .form-check-input:checked {
+    background-color: #000;
+    border-color: #000;
+  }
+  .form-check-input {
+    margin-right: 4px; /* Adjust spacing between checkbox and label */
+    height: 20px;
+    width: 20px;
+    border: 1px solid black;
+  }
+  #sidebar{
+    font-size: 12px;
+    font-weight:620;
+    position: fixed;
+    top: 0px;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    
+    align-items: center;
+    width: 25%;
+    overflow-y: auto;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
 }
+
+#filter{
+ 
+    margin: 10px;
+    padding: 10px;
+}
+#filter label{
+   margin: 6px;
+}
+hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+@media screen and (max-width: 768px){
+    #sidebar{
+        display: none;
+    }
+}
+@media screen and (max-width: 576px){
+    #sidebar{
+        width: 100%;
+    }
+    #filter{
+        padding: 5px;
+    }
+    #filter label{
+        margin: 4px;
+    }
+}
+#one button{
+  border: none;
+  background-color:rgb(255, 255, 255);
+ 
+  margin: 6px;
+  font-size: 12px;
+  font-weight:600;
+  font-family: Noto Sans, sans-serif;
+}
+#two div{
+ border: 1px double black;
+ height: 50px;
+ width: 50px;
+
+ 
+ 
+ 
+}
+#two{
+
+            display: flex;  
+            flex-wrap: wrap;
+            gap: 8px;
+  
+}
+
+#two>div:nth-last-of-type(1){
+  grid-area: a1;
+  background-color: red;
+  
+}
+#two>div:nth-last-of-type(2){
+  grid-area: a2;
+  background-color: rgb(230, 0, 255);
+  
+}
+#two>div:nth-last-of-type(3){
+  grid-area: a3;
+  background-color: rgb(0, 255, 140);
+  
+}
+#two>div:nth-last-of-type(4){
+  grid-area: a4;
+  background-color: rgb(0, 47, 255);
+  
+}
+#two>div:nth-last-of-type(5){
+  grid-area: a5;
+  background-color: rgb(242, 255, 0);
+  
+}
+#two>div:nth-last-of-type(6){
+  grid-area: a6;
+  background-color: rgb(0, 221, 255);
+  
+}
+#two>div:nth-last-of-type(7){
+  grid-area: a7;
+  background-color: rgb(21, 0, 255);
+  
+}
+#two>div:nth-last-of-type(8){
+  grid-area: a8;
+  background-color: rgb(65, 232, 62);
+  
+}
+#two>div:nth-last-of-type(9){
+  grid-area: a9;
+  background-color: rgb(0, 255, 26);
+  
+}
+#two>div:nth-last-of-type(10){
+  grid-area: a10;
+  background-color: rgb(255, 0, 132);
+  
+}
+#two>div:nth-last-of-type(11){
+  grid-area: a11;
+  background-color: rgb(255, 183, 0);
+  
+}
+#two>div:nth-last-of-type(12){
+  grid-area: a12;
+  background-color: rgb(0, 255, 94);
+  
+}
+#two>div:nth-last-of-type(13){
+  grid-area: a13;
+  background-color:chartreuse;
+  
+}
+#two>div:nth-last-of-type(14){
+  grid-area: a14;
+  background-color:gray;
+  
+}
+
+
+.con>div{
+  border: 2px solid blueviolet;
+  height: 100px;
+  width: 100px;
+  background-color: black;
+}
+
+#filter button{
+  border: none;
+  background-color:rgb(246, 240, 240);
+  /* padding: 10px; */
+  margin: 6px;
+  font-size: 12px;
+  font-weight:600;
+  font-family: Noto Sans, sans-serif;
+}
+/* sidebar css ends here */
+
+
 #watch-img{
     /* border: 1px solid; */
-    width: 100%;
+    width: 75%;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 10px;
