--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -1,22 +1,32 @@
-body{
-    margin: 0px;
-    padding: 0px;
+/* ========================================header css start here========================== */
+
+
+body {
+    font-family: "Noto Sans", sans-serif;
 }
-.container{
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#sidebar{
-    width: 25%;
-  
-}
-#watch-img{
-    width: 75%;
-  
+
+.navbar {
+    background: rgb(119,36,174);
+    background: linear-gradient(90deg, rgba(119,36,174,1) 0%, rgba(211,100,100,1) 50%, rgba(182,133,64,1) 100%);
+    height: 60px;
 }
 
 
+.navbar-brand {
+    color: #090909;
+    font-weight: bold;
+}
+
+.navbar-nav .nav-link {
+    color: #040404;
+}
+
+/* Custom CSS to align brand image to the left */
+@media (min-width: 768px) {
+    .navbar-brand {
+        margin-right: auto;
+    }
+}
+
+
+/* ===========================ss end here============================= */
