--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -10,8 +10,9 @@ body {
 .navbar {
     background: rgb(119,36,174);
     background: linear-gradient(90deg, rgba(119,36,174,1) 0%, rgba(211,100,100,1) 50%, rgba(182,133,64,1) 100%);
-    height: 45px;
+    height: 50px;
     box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 
@@ -32,7 +33,7 @@ body {
 }
 .container-fluid img{
     width: 120px;
-    height: 45px;
+    height: 48px;
    
 }
 
@@ -47,6 +48,7 @@ body {
 nav{
     width:100%;
     margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
 }
  
@@ -240,7 +242,7 @@ hr{
 
 .mainpart{
     display: flex;
-    height:500px;
+    height:100vh;
     width: 100%;
 }
 .sidebar{
@@ -304,6 +306,43 @@ border: 2px solid black;
 
 
 /* --------------vaibhav's css end here------------------- */
+
+
+/* =============pratik's css starts here================== */
+.watch-card {
+    width: 75%;
+    display: grid;
+    /* flex-wrap: wrap;
+    justify-content: start;
+    overflow-y: auto; */
+    grid-template-columns: repeat(4,1fr);
+    margin-right: 20px;
+    gap: 5px;
+    overflow-y: auto; 
+  }
+.card img{
+    width: 100%;
+    background-position: center;
+}
+.card img:hover{
+    transform: scale(1.2);
+}
+.card1 img{
+    width: 100%;
+    background-position: center;
+    background-color:rgb(209, 207, 207);
+
+}
+.card1:hover{
+    cursor: pointer;
+    border: 1px solid;
+
+
+}
+
+/* =============pratik's css ends here================== */
+
+ 
 
 
 
