--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -320,6 +320,9 @@ border: 2px solid black;
     gap: 5px;
     overflow-y: auto; 
   }
+  .card-body>p:nth-of-type(2){
+    font-size: 12px;
+  }
 .card img{
     width: 100%;
     background-position: center;
