--- a/Figma/styles.scss
+++ b/Figma/styles.scss
@@ -1,7 +1,8 @@
 @import"_section1";
 @import"_section2";
-
-
+@import "_figure";
+@import "_section";
+@import "_summary";
 
 body {
     margin: 0;
