--- a/Figma/styles.css
+++ b/Figma/styles.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 #section1 {
+  position: relative;
   width: 1920px;
   height: 884px;
+  margin: auto;
 }
 #section1 > .image {
   position: relative;
@@ -176,7 +178,7 @@
   width: 1320px;
   height: 544px;
   top: 99px;
-  left: 300px;
+  margin: auto;
 }
 #section2 > h3 {
   position: relative;
@@ -1107,4 +1109,257 @@ summary > #icon-section > div > img {
 body {
   margin: 0;
   padding: 0;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main-container {
+  width: 1320px;
+  height: 529.98px;
+  margin: auto;
+}
+.main-container .article1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-container .article1 h5 {
+  font-family: "Inter", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 45px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article1 p {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article2 {
+  display: flex;
+  gap: 30px;
+}
+.main-container .article2 > div {
+  width: 409.98px;
+  height: 299.98px;
+  top: 95px;
+  left: 15px;
+}
+.main-container .article2 button {
+  width: 62.17px;
+  height: 36.25px;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 9px, 14.8px, 9.25px, 15px;
+  border-radius: 200px;
+  border: none;
+}
+.main-container .article2 > div:nth-of-type(1) {
+  background-image: url("./vaibhavs image/photo-1.png");
+  background-size: cover;
+  background-position: center;
+}
+.main-container .article2 > div:nth-of-type(2) {
+  background-image: url("./vaibhavs image/photo-2.png");
+  background-size: cover;
+  background-position: center;
+}
+.main-container .article2 > div:nth-of-type(3) {
+  background-image: url("./vaibhavs image/photo-3.png");
+  background-size: cover;
+  background-position: center;
+}
+.main-container .article3 {
+  display: flex;
+}
+.main-container .article3 > div:nth-of-type(1) {
+  margin-right: 70px;
+}
+.main-container .article3 > div:nth-of-type(2) {
+  margin-right: 62.04px;
+}
+.main-container .article3 #s1 {
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article3 #s2 {
+  font-family: "Inter", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article3 #s3 {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article3 #s4 {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article3 #s5 {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article3 #s6 {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.main-container .article3 p {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #05073C;
+  margin: 0px;
+}
+
+footer {
+  width: auto;
+  background-image: url("images.png");
+  background-position: center;
+  background-size: cover;
+}
+footer .myfooter-section1 {
+  width: 1320px;
+  height: 655.13px;
+}
+footer .myfooter-section1 .part-1 {
+  width: 1290px;
+  height: 185.13px;
+  left: 15px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid silver;
+}
+footer .myfooter-section1 .part-1 h4 {
+  margin-top: 94.31px;
+  margin-left: 80px;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 38px;
+  text-align: left;
+}
+footer .myfooter-section1 .part-1 span {
+  color: #EB662B;
+}
+footer .myfooter-section1 .part-1 p {
+  width: 74.72px;
+  height: 31.88px;
+  margin-top: 84.06px;
+  margin-left: 592px;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+footer .myfooter-section1 .part-2 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+footer .myfooter-section1 .part-2 h4 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+footer .myfooter-section1 .part-2 p {
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+footer .myfooter-section1 .part-2 > div:nth-of-type(1) {
+  width: 439.98px;
+  height: 390px;
+}
+footer .myfooter-section1 .part-2 > div:nth-of-type(2) {
+  width: 128.23px;
+  height: 390px;
+}
+footer .myfooter-section1 .part-2 > div:nth-of-type(3) {
+  width: 119.59px;
+  height: 390px;
+}
+footer .myfooter-section1 .part-2 > div:nth-of-type(4) {
+  width: 330px;
+  height: 390px;
+}
+footer .myfooter-section1 .part-2 > div:nth-of-type(4) #first-name {
+  width: 300px;
+  height: 60px;
+  border-radius: 12px;
+  border: 1px solid #E7E6E6;
+}
+@media (min-width: 1850px) {
+  footer {
+    max-width: 1800px;
+    margin: auto;
+  }
+}
+@media (min-width: 1400px) {
+  footer .myfooter-section1 {
+    max-width: 1320px;
+    margin: auto;
+  }
+}
+
+.copyrights {
+  width: 1320px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.copyrights span {
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+@media (min-width: 1400px) {
+  .copyrights {
+    max-width: 1320px;
+    margin: auto;
+  }
 }/*# sourceMappingURL=styles.css.map */
