--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -7,22 +7,14 @@ body {
     padding: 0;
 }
 
+
+
 .navbar {
-    background: rgb(119,36,174);
-    background: linear-gradient(90deg, rgba(119,36,174,1) 0%, rgba(211,100,100,1) 50%, rgba(182,133,64,1) 100%);
-    height: 50px;
-    box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background: #0e0e0e;
+  
 }
-
-
-.navbar-brand {
-    color: #090909;
-    font-weight: bold;
-}
-
-.navbar-nav .nav-link {
-    color: #040404;
+.navbar-brand img {
+  height: 50px;
 }
 
 /* Custom CSS to align brand image to the left */
@@ -37,6 +29,33 @@ body {
    
 }
 
+
+#carouselExampleIndicators{
+  margin: 5px;
+}
+
+
+
+/* vedio container */
+
+
+.video-container {
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+  max-width: 100%;
+  background: #000;
+  margin: 20px;
+}
+.video-container video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
 
 
 /* ===========================header css end here============================= */
